# fastapi-onnx-sklearn

./: .gitignore  README.md  main.py  pyproject.toml  train.py
